Tentando resolver o cartão